--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,11 @@ CSS Style sheet
 Ver. 1.0
 Author: Nishant Dogra
 Initial built: 09-10-2017
-Updated: 11-12-2017
+Updated: 16-12-2017
 */
 
-body{ font-size: 14px; line-height: 1.5; background: #ebebeb;}
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+body{ font-size: 14px; line-height: 1.5; background: #ebebeb; font-family: 'Roboto Slab', serif; color: #323232;}
 
 .m-t-10 { margin-top: 10px;} .m-t-20 { margin-top: 20px;}
 .m-t-30 { margin-top: 30px;} .m-t-40 { margin-top: 40px;}
@@ -46,7 +47,10 @@ body{ font-size: 14px; line-height: 1.5; background: #ebebeb;}
 .btn { -webkit-transition: box-shadow ease-in-out .1s; -moz-transition: box-shadow ease-in-out .1s; -o-transition: box-shadow ease-in-out .1s; transition: box-shadow ease-in-out .1s; color: #ffffff;}
 .btn[class*='bg-']:hover { box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.1); }
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus ,button:focus{ outline: none; outline-offset: 0;}
+.btn-outline-primary { color: #007bff;}
+.btn-outline-secondary { color: #868e96;}
 
+.navbar-toggler { cursor: pointer;}
 header { background: linear-gradient(230deg,#a24bcf,#4b79cf,#4bc5cf); background-size: 300% 300%; -webkit-animation: AnimationName 7s ease infinite; -moz-animation: AnimationName 7s ease infinite; animation: AnimationName 7s ease infinite;}
 
 @-webkit-keyframes AnimationName {
@@ -71,7 +75,39 @@ header { background: linear-gradient(230deg,#a24bcf,#4b79cf,#4bc5cf); background
 .masonrygrid { margin-top: 105px;}
 .navbar { padding: 20px;}
 
-footer { padding: 70px 0; background: #dcdcdc;}
+footer { padding: 70px 0; background: #2c1658;}
+footer a { color: #9551cf;}
+footer a:hover { color: #9551cf;}
+/* footer img { display: none;} */
+footer p { color: #e2e2e2;}
+
+.card:hover { box-shadow: 0px 10px 10px 0px rgba( 0, 0, 0, .10 ); cursor: all-scroll;}
 
 .subscribe-form { background: linear-gradient(230deg,#a24bcf,#4b79cf,#4bc5cf); padding: 50px 0;}
 .subscribe-form form { max-width: 600px; margin: auto;}
+.subscribe-form .btn { width: 100px; cursor: pointer; padding: 9px;}
+
+.header-canvas { width: 100%; height: 100%; max-height: 160px; overflow: hidden; background: url('../img/trianglify-background.svg'); text-align: center; position: relative; top: 80px; background-position: 0 -250px;}
+.header-canvas h1 { margin-top: 10px; color: #ffffff; font-weight: 900; font-size: 68px;}
+.header-canvas h2 { margin-top: 10px; color: #ffffff; font-weight: 100; font-size: 18px;}
+.logo-container img { max-width: 200px;}
+/* .logo-container img { display: none;} */
+.logo-footer { display: block; margin-top: 50px;}
+.logo-footer img { max-width: 400px;}
+
+.blog-posts-body { background: #ffffff;}
+.blog-main { margin: 0 0 60px;}
+.blog-post-title { font-size: 42px; font-weight: bold; margin-bottom: 16px;}
+.blog-main p { font-size: 16px; line-height: 1.6;}
+.image-title-post { width: 100%; float: left; text-align: center; margin: 5px 0 12px;}
+.blog-posts-body .card { float: left; width: 32%; margin: 1%;}
+.blog-posts-body .card:first-child { margin-left: 0;}
+.blog-posts-body .card:last-child { margin-right: 0;}
+
+.related-posts { width: 100%; margin: 0 0 60px; float: left;}
+.related-posts .card-title { font-size: 16px;}
+.related-posts .card-text { font-size: 13px;}
+
+.sidebar-module { padding: 10px 15px; border: 5px solid #f5f4f4; margin-bottom: 25px;}
+.sidebar-module .list-unstyled li { display: inline-block; margin: 3px; border: 1px solid #f3f3f3; background: #f5f4f4;}
+.sidebar-module .list-unstyled li a { padding: 8px 4px; color: #3e0b58; font-size: 12px;}
